--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.0.6",
     "@fontsource/inter": "^5.0.16",
+    "@tanstack/react-query": "^5.14.1",
+    "@tanstack/react-query-devtools": "^5.14.1",
     "aws-amplify": "^6.0.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
