--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.0.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.8",
     "@tanstack/react-query": "^5.14.1",
     "@tanstack/react-query-devtools": "^5.14.1",
     "aws-amplify": "^6.0.7",
+    "axios": "^1.6.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
